# logintel-mcp-server

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: config.yaml
npm/: package.json
npm/scripts/: install.js
src/logintel/: __init__.py  __main__.py  cache.py  config.py  logging_config.py  server.py
src/logintel/intelligence/: __init__.py  comparator.py  correlator.py  nl2query.py  root_cause.py
src/logintel/models/: __init__.py  common.py  params.py  results.py
src/logintel/providers/: __init__.py  base.py  cloudwatch.py  datadog.py  local.py  loki.py  registry.py
src/logintel/utils/: __init__.py  time_parser.py
tests/: test_config.py  test_local_provider.py  test_models.py  test_providers.py  test_time_parser.py
tests/e2e/: test_main_entrypoint.py  test_server_transport.py
tests/integration/: test_server_error_paths.py  test_server_intelligence_tools.py  test_server_mcp_cloudwatch.py  test_server_mcp_datadog.py  test_server_mcp_loki.py  test_server_tools.py
tests/unit/: test_cache.py  test_config.py  test_intelligence_comparator.py  test_intelligence_correlator.py  test_intelligence_nl2query.py  test_intelligence_root_cause.py  test_logging_config.py  test_models.py  test_phase5_coverage_gaps.py  test_providers_base.py  test_providers_cloudwatch.py  test_providers_cloudwatch_coverage_gaps.py  test_providers_cloudwatch_helpers.py  test_providers_datadog.py  test_providers_datadog_coverage_gaps.py  test_providers_datadog_query_builder.py  test_providers_local.py  test_providers_local_coverage_gaps.py  test_providers_local_edge_cases.py  test_providers_local_oserror.py  test_providers_loki.py  test_providers_loki_coverage_gaps.py  test_providers_loki_query_builder.py  test_providers_registry.py  test_utils_time_parser.py
